Add all system modules to make them visible per-se